include form and create action for new articles

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,13 @@
 <h1> this is a header I put up </h1>
+
+<form id="new-article">
+  <input type='text' placeholder='Article title' name='title'/>
+  <input type='text' placeholder='Article body' name='body'/>
+  <input type='submit' value='Create an Article'/>
+</form>
+
 <button id="get-articles">Get Articles</button>
+
 <ul id="articles">
 </ul>
+
